Move "Reporting field usage" to "Sending metrics to GraphOS"

--- a/src/content/graphos/metrics/index.mdx
+++ b/src/content/graphos/metrics/index.mdx
@@ -4,7 +4,7 @@ description: Understand your supergraph's usage and performance
 ---
 
 Monitoring and optimizing your services for performance and efficiency is paramount.
-Once you've configured your graph to send [operation](./sending-operation-metrics/) and [field metrics](./field-usage#reporting-field-usage) to GraphOS, you can view them in GraphOS Studio on the **Insights** page.
+Once you've configured your graph to send [operation](./sending-operation-metrics/) and [field usage metrics](./sending-operation-metrics#reporting-field-usage) to GraphOS, you can view them in GraphOS Studio on the **Insights** page.
 By understanding and acting on these metrics, you can enhance the speed and reliability of your services.
 
 > **Note**: Do you have to report both to make use of the insights page?
