--- a/src/content/graphos/metrics/field-usage.mdx
+++ b/src/content/graphos/metrics/field-usage.mdx
@@ -1,5 +1,5 @@
 ---
-title: Measuring field usage with GraphOS Studio
+title: Field usage in GraphOS
 description: Understand which fields your clients use
 ---
 
