--- a/src/content/graphos/metrics/operations.mdx
+++ b/src/content/graphos/metrics/operations.mdx
@@ -59,7 +59,7 @@ More overall [request metrics](#request-metrics) are directly below the overview
 
 ## Operation metrics
 
-By default, the left sidebar shows all operations, but you can use it to hone in on certain ones.
+By default, the left sidebar shows a paginated list of all operations, but you can use it to hone in on certain ones.
 Specifically, you can:
 
 - Search for a particular operation by its name or fields' names
@@ -85,14 +85,14 @@ Specifically, you can:
   - Total duration in milliseconds, seconds, minutes, or hours (ms, s, min, hr)
   - Signature size in bytes (B, KB)
 
-As with the **Operations Overview**, you can click an operation in the sidebar to dive into its details.
-
 <img
   src="../img/operation-sidebar-sort.jpg"
   className="screenshot"
   alt="The Insights page in GraphOS Studio"
   width="300"
 />
+
+As with the **Operations Overview**, you can click an operation in the sidebar to dive into its details.
 
 ### Operation details
 
